--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -53,32 +53,44 @@
         </nav>
         <main>
             <section>
-                <div>
-                    <h1 class="titulos">Acerca</h1>
-                    <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de los gatos
-                        pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una taza de
-                        café o
-                        té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar
-                        permanente de
-                        una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por supuesto,
-                        de
-                        la experiencia que ofrecemos a nuestros visitantes.
+                <div class="container my-5 text-center">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 ">
+                            <h1>Acerca</h1>
+                            <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
+                                los
+                                gatos
+                                pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una
+                                taza
+                                de
+                                café o
+                                té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar
+                                permanente de
+                                una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por
+                                supuesto,
+                                de
+                                la experiencia que ofrecemos a nuestros visitantes.
 
-                        En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
-                        garantizando
-                        que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y personalidad
-                        única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete a
-                        nuestra
-                        historia, donde la pasión por los gatos y la pasión por el café se unen para crear un lugar
-                        mágico
-                        donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son parte
-                        esencial de nuestra familia y de tu experiencia inolvidable!</p>
-                </div>
-                <div>
-                    <img src="../assets/img/logo_cat_cafeold.png" alt="">
-                </div>
-                <div>
-                    <iframe width="560" height="315"
+                                En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
+                                garantizando
+                                que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y
+                                personalidad
+                                única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete
+                                a
+                                nuestra
+                                historia, donde la pasión por los gatos y la pasión por el café se unen para crear un
+                                lugar
+                                mágico
+                                donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son
+                                parte
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <img src="../assets/img/logo_cat_cafeold.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div>
+                    </div>
+                    <iframe width="100%" height="600"
                         src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -86,18 +98,21 @@
                 </div>
             </section>
         </main>
-        <footer>
-            <div class="d-flex justify-content-between px-3">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
-                <div class="pt-4 ">
-                    <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                    <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="d-flex justify-content-between px-3">
+                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
+                    <div class="pt-4">
+                        <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                        <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                        <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                    </div>
+                    <div class="iconos d-flex align-items-end">
+                        <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="iconos text-center">
-                <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
         </footer>
         <script src="../js/bootstrap.bundle.min.js"></script>
