--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -65,28 +65,32 @@
                 ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-            <img src="../assets/img/carta1.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta2.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta3.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta4.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta5.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta6.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta2.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta3.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta4.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta5.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta6.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
         </div>
     </main>
-    <footer>
-        <div class="d-flex justify-content-between px-3">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
-            <div class="pt-4 ">
-                <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="d-flex justify-content-between px-3">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
+                <div class="pt-4">
+                    <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                    <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                    <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                </div>
+                <div class="iconos d-flex align-items-end">
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </div>
             </div>
         </div>
-        <div class="iconos text-center">
-            <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-        </div>
     </footer>
+
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
