--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="container-fluid p-3">
     <header>
         <a href="./index.html" class="d-flex align-items-center justify-content-center">
-            <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+            <img src="./assets/img/logo_cat_cafe.png" alt="Logo de Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
                 <h1 class="mb-0">Miau café</h1>
                 <p>Un café para ronronear</p>
@@ -67,8 +67,7 @@
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
                 <div class="col-lg-6 col-sm-12 mb-4">
-                    <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana"
-                        class="img-fluid rounded-pill imagen">
+                    <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
                 </div>
             </div>
         </div>
@@ -86,23 +85,26 @@
                         déjate cautivar por su magia peluda.</p>
                 </div>
                 <div class="col-lg-6 col-sm-12 mb-4 order-lg-first">
-                    <img src="./assets/img/gato1.jpg" alt="Gato y cafe" class="img-fluid rounded-pill imagen">
+                    <img src="./assets/img/gato1.jpg" alt="Gato y cafe" class="img-fluid rounded-pill">
                 </div>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="d-flex justify-content-between px-3">
-            <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
-            <div class="pt-4 ">
-                <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="d-flex justify-content-between px-3">
+                <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
+                <div class="pt-4">
+                    <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                    <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                    <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                </div>
+                <div class="iconos d-flex align-items-end">
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="iconos text-center">
-            <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
     <script src="./js/bootstrap.bundle.min.js"></script>
