--- a/pages/michis.html
+++ b/pages/michis.html
@@ -50,11 +50,20 @@
         </div>
     </nav>
     <main class="mt-2">
-        <h1 class="text-center">Conoce a nuestros michis!</h1>
+        <div class="container my-5 text-center">
+            <h1>Conoce a nuestros michis!</h1>
+            <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
+                nuestra historia, nuestros amados mininos. En "Nuestros Michis", te invitamos a conocer a cada uno
+                de nuestros gatos, descubriendo sus personalidades únicas, historias de vida y por qué se han
+                convertido en parte esencial de la magia de Miau Café. Desde los gatos juguetones hasta los más
+                relajados, te ofrecemos un vistazo exclusivo a las estrellas peludas que alegran nuestro espacio y
+                que te esperan con cariño. Acompáñanos en este paseo por el mundo felino de Miau Café, donde cada
+                gato tiene su propia historia que contar.</p>
+        </div>
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around">
                 <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/gato1.jpg" class="card-img-top rounded-5 " alt="...">
+                    <img src="../assets/img/hecate.jpg" class="card-img-top rounded-5 " alt="...">
                     <div class="card-body">
                         <h2 class="text-center">Hecate</h2>
                         Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
@@ -65,53 +74,52 @@
                     </div>
                 </div>
                 <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/gato2.jpg" class="card-img-top rounded-5 " alt="...">
+                    <img src="../assets/img/amy.jpg" class="card-img-top rounded-5 " alt="...">
                     <div class="card-body">
                         <h2 class="text-center">Amy</h2>
-                        Amy es la soñadora de Miau Café. Siempre puedes encontrarla disfrutando de una siesta tranquila
-                        en su
-                        rincón favorito. Su serenidad y calma son reconfortantes, y pasar tiempo a su lado es como
-                        encontrar un
-                        oasis de paz en medio del bullicio.</p>
+                        Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
+                        Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy es la
+                        compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un maullido
+                        que te hará sonreír.</p>
                     </div>
                 </div>
                 <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/gato3.jpg" class="card-img-top rounded-5 " alt="...">
+                    <img src="../assets/img/Rory.jpg" class="card-img-top rounded-5 " alt="...">
                     <div class="card-body">
                         <h2 class="text-center">Rory</h2>
-                        Rory es el aventurero del grupo. Siempre en busca de diversión, es un experto en juegos y
-                        travesuras. Su
-                        energía y entusiasmo son contagiosos, y es el gato perfecto para aquellos que buscan una
-                        experiencia
-                        llena de vitalidad.</p>
+                        Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
+                        convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte con su
+                        cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con nuestros
+                        gatos.</p>
                     </div>
                 </div>
                 <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/gato1.jpg" class="card-img-top rounded-5 " alt="...">
+                    <img src="../assets/img/prompto.jpg" class="card-img-top rounded-5 " alt="...">
                     <div class="card-body">
-                        <h2 class="text-center">Benito</h2>
-                        Benito es el rey de la elegancia en Miau Café. Con su pelaje exuberante y sus ojos curiosos, es
-                        imposible
-                        no enamorarse de su encanto. Siempre dispuesto a recibir caricias y a posar para las fotos,
-                        Benito es el
-                        anfitrión perfecto en nuestro café.</p>
+                        <h2 class="text-center">Prompto</h2>
+                        Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
+                        personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
+                        torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <div class="d-flex justify-content-between px-3">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
-            <div class="pt-4 ">
-                <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="d-flex justify-content-between px-3">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
+                <div class="pt-4">
+                    <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                    <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                    <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                </div>
+                <div class="iconos d-flex align-items-end">
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="iconos text-center">
-            <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
