--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </main>
     <footer class="container-fluid">
         <div class="row">
-            <div class="d-flex justify-content-between px-3">
-                <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot">
-                <div class="pt-4">
+            <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="pt-4 col-12 col-lg-7">
                     <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
                     <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
                 </div>
-                <div class="iconos d-flex align-items-end">
+                <div class="iconos col-12 col-lg-3 text-center">
                     <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
