detalles galeria michis

--- a/pages/michis.html
+++ b/pages/michis.html
@@ -63,10 +63,11 @@
         </div>
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around">
-                <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/hecate.jpg" class="card-img-top rounded-5 " alt="...">
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Hécate una gata tricolor">
                     <div class="card-body">
-                        <h2 class="text-center">Hecate</h2>
+                        <h2 class="text-center">Hécate</h2>
                         Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
                         actitud
                         juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan
@@ -74,8 +75,9 @@
                         interacción llena de alegría y vitalidad.</p>
                     </div>
                 </div>
-                <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/amy.jpg" class="card-img-top rounded-5 " alt="...">
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Amy una gata de pelo largo">
                     <div class="card-body">
                         <h2 class="text-center">Amy</h2>
                         Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
@@ -84,8 +86,8 @@
                         que te hará sonreír.</p>
                     </div>
                 </div>
-                <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/Rory.jpg" class="card-img-top rounded-5 " alt="...">
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
                     <div class="card-body">
                         <h2 class="text-center">Rory</h2>
                         Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
@@ -94,8 +96,8 @@
                         gatos.</p>
                     </div>
                 </div>
-                <div class="card" style="width: 25rem;">
-                    <img src="../assets/img/prompto.jpg" class="card-img-top rounded-5 " alt="...">
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
                     <div class="card-body">
                         <h2 class="text-center">Prompto</h2>
                         Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
