--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
     </nav>
     <main>
-        <div class="card bg-dark text-black text-center d-none d-lg-block">
-            <img src="./assets/img/banner.jpeg" class="card-img" alt="Banner Miau Cafe">
+        <div class="card d-none d-lg-block">
+            <img src="./assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
         </div>
         <div class="container my-5">
             <div class="row">
@@ -93,7 +93,7 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
                 <div class="pt-4 col-12 col-lg-7">
                     <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
