--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -6,75 +6,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca | Miau Café</title>
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
 </head>
 
-<body>
-    <header>
-        <a href="../index.html">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
-        </a>
-        <nav class="nav">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="michis.html">Nuestros michis</a></li>
-                <li><a href="acerca.html" class="seleccion">Acerca</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-    </header>
-    <main>
-        <section>
-            <div>
-                <h1 class="titulos">Acerca</h1>
-                <P>En Meow Cafe, nuestra historia es una de amor por los gatos y pasión por el café. Fundado por [Tus
-                    Nombres], somos un equipo de amantes de los felinos que decidimos crear un espacio único donde las
-                    personas pueden disfrutar de la compañía de gatos mientras degustan deliciosas bebidas y bocadillos.
+<body class="container-fluid p-3">
 
-                    Desde el momento en que abrimos nuestras puertas, nos hemos comprometido a brindar un refugio seguro
-                    y acogedor para gatos rescatados que buscan un hogar. No solo somos una cafetería, sino también una
-                    plataforma para la adopción de gatos, conectando a estos maravillosos seres con familias amorosas.
-
-                    Nuestra misión es simple: proporcionar a nuestros clientes una experiencia inolvidable y, al mismo
-                    tiempo, contribuir al bienestar de los gatos necesitados. Cada visita a Meow Cafe es una oportunidad
-                    para disfrutar de la alegría y la calidez que nuestros amigos felinos traen a nuestras vidas.
-
-                    Estamos comprometidos con la comodidad y la felicidad tanto de nuestros visitantes humanos como de
-                    nuestros gatos residentes. Nuestro equipo dedicado se asegura de que cada experiencia sea memorable
-                    y segura para todos.
-
-                    Gracias por ser parte de la historia de Meow Cafe y por apoyar nuestra causa. Esperamos que
-                    disfrutes de tu tiempo con nosotros y, quién sabe, ¡quizás encuentres a tu compañero felino perfecto
-                    para llevar a casa!
-
-                    ¡Ven y únete a nosotros en Meow Cafe! ¡Los michis y el café te esperan!</P>
+    <body class="container-fluid p-3">
+        <header>
+            <a href="../index.html" class="d-flex align-items-center justify-content-center">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+                <div class="text-center mx-4 pt-3">
+                    <h1 class="mb-0">Miau café</h1>
+                    <p>Un café para ronronear</p>
+                </div>
+            </a>
+        </header>
+        <!--intente poner el navbar sticky cuando bajara pero no funcionaba dentro del header y fuera de el funciona correctamente-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+            <div class="container">
+                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./galeria.html">Galería</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./michis.html">Nuestros michis</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link active" aria-current="page" href="#" id="activo">Acerca</a>
+                        </li>
+                        <li class=" nav-item text-center">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <img src="../assets/img/logo_cat_cafeold.png" alt="">
+        </nav>
+        <main>
+            <section>
+                <div class="container my-5 text-center">
+                    <div class="row">
+                        <div class="col-12 col-lg-6 ">
+                            <h1>Acerca</h1>
+                            <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
+                                los
+                                gatos
+                                pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una
+                                taza
+                                de
+                                café o
+                                té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar
+                                permanente de
+                                una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por
+                                supuesto,
+                                de
+                                la experiencia que ofrecemos a nuestros visitantes.
+
+                                En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
+                                garantizando
+                                que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y
+                                personalidad
+                                única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete
+                                a
+                                nuestra
+                                historia, donde la pasión por los gatos y la pasión por el café se unen para crear un
+                                lugar
+                                mágico
+                                donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son
+                                parte
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <img src="../assets/img/logo_cat_cafe.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div>
+                    </div>
+                    <iframe width="100%" height="600"
+                        src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </section>
+        </main>
+        <footer class="container-fluid">
+            <div class="row">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
+                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                    <div class="pt-4 col-12 col-lg-7">
+                        <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                        <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                        <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                    </div>
+                    <div class="iconos col-12 col-lg-3 text-center">
+                        <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <iframe width="560" height="315"
-                    src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
-            <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
-            <p>Teléfono: +56 9 8765 4321</p>
-        </div>
-        <div class="iconos">
-            <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-        </div>
-    </footer>
-</body>
+        </footer>
+        <script src="../js/bootstrap.bundle.min.js"></script>
+    </body>
 
 </html>
